--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -24,6 +24,7 @@ f
 
     <!-- experiment file -->
     <script src="stimuli_creation/reading_stims.js"></script>
+    <script src="stimuli_creation/example_stims.js"></script>
     <script type="text/javascript">
       var CONDITION = 1;
     </script>
@@ -49,8 +50,9 @@ f
     <p>On the following pages, you will always see a phrase masked with dashes (-). To read the sentence, please press the space bar which will reveal the next word.
 			Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
+    <p>Let's start with an example!</p>
 
-		<p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10mins.</p>
+
 
     <input type="button" class="button" value="Continue" onclick="exp.go();">
 
@@ -73,10 +75,10 @@ f
 
 <div class="slide" id="almost">
 
-  <h3>Instructions</h3>
-  <p>On the following pages, you will always see a phrase masked with dashes (-). To read the sentence, please press the space bar which will reveal the next word.
+  <h3>Let's Get Started!</h3>
+  <p>Great job! Now we can really get started.</p>
+  <p><strong>To reiterate:</strong> in the following pages, you will always see a phrase masked with dashes (-). To read the sentence, please press the space bar which will reveal the next word.
     Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
-
 
   <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10mins.</p>
 
