--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -7,7 +7,7 @@
   <script src="shared/js/jquery-1.11.1.min.js"></script>
   <script src="shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
   <script src="shared/js/underscore-min.js"></script>
-  
+
   <!-- experiment logic -->
   <script src="shared/js/exp-V2.js"></script>
   <script src="shared/js/stream-V2.js"></script>
@@ -39,8 +39,33 @@
     <!-- <img src="../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img> -->
     <p id="cocolab">Stanford Linguistics</p>
     <p id="instruct-text">
-      In this experiment, you will read 20 sentence pairs word-by-word and for each sentence, answer a short question. Please pay attention, thanks!</p>
+      In this experiment, you will read 20 sentence pairs word-by-word and for each sentence, answer a short question. You will also be asked to complete a short personality test. Please pay attention, thanks!</p>
     <input id="start_button" type="button" class="button" value="Start Experiment">
+
+    <p class="left">
+      <strong><br>
+      LEGAL INFORMATION</strong>:<br>
+      <br>
+      We invite you to participate in a research study on language production and comprehension. Your experimenter will ask you to do a linguistic task such as reading sentences or words, naming pictures or describing scenes, making up sentences of your own, or participating in a simple language game. You may also be asked to complete a short personality test.
+      <br>
+      <br>
+      There are no risks or benefits of any kind involved in this study.
+      <br>
+      <br>
+      You will be paid for your participation at the posted rate. If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written dataresulting from the study. You may print this form for your records.
+      <br>
+      <strong><br>
+      CONTACT INFORMATION</strong>:
+      <br>
+      <br>
+      If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, you should contact the Protocol Director Meghan Sumner at (650)-725-9336.
+      <br>
+      <br>
+      If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA.
+      <br>
+      <br>
+      If you agree to participate, please proceed to the study tasks.
+    </p>
   </div>
 
 
