added FireFox warning

--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -39,7 +39,10 @@
     <!-- <img src="../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img> -->
     <p id="cocolab">Stanford Linguistics</p>
     <p id="instruct-text">
-      In this experiment, you will read 20 sentence pairs word-by-word and for each sentence, answer a short question. You will also be asked to complete a short personality test. Please pay attention, thanks!</p>
+      In this experiment, you will read 20 sentence pairs word-by-word and for each sentence, answer a short question.
+      You will also be asked to complete a short personality test. Please pay attention, thanks!<br>
+      <strong>Please note that this experiment cannot be completed in the FireFox browser.</strong>
+    </p>
     <input id="start_button" type="button" class="button" value="Start Experiment">
 
     <p class="left">
