--- a/experiments/norming_study_one/experiment.html
+++ b/experiments/norming_study_one/experiment.html
@@ -31,7 +31,7 @@
   </head>
 
   <body onload="init()">
-    <noscript>This task requires JavaScript.</noscript>
+    <noscript>This task requires JavaScript, and cannot be completed in the FireFox browser.</noscript>
 
     <!-- initial slide -->
     <div class="slide" id="i0">
@@ -39,6 +39,9 @@
         You will read some sentences. <strong>Your task is to answer a question about the sentence to the best of your ability.</strong><br>
         <br>
         The experiment will take approximately 10 minutes. Let's start with an example!
+        <br>
+        <strong> Please note that this experiment cannot be completed in the FireFox browser.</strong>
+        <br>
       </p><button id="start_button" type="button">Start experiment</button>
       <p class="left legal">
         <strong><br>
@@ -437,7 +440,7 @@
             Better than average experiment
           </option>
         </select>
-        
+
         <p>
           We would be interested in any comments you have about this experiment. Please type them here:
         </p>
