--- a/experiments/2_Maze_Neutrality/experiment/experiment.html
+++ b/experiments/2_Maze_Neutrality/experiment/experiment.html
@@ -39,7 +39,7 @@
     <!-- <img src="../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img> -->
     <p id="cocolab">Stanford Linguistics</p>
     <p id="instruct-text">
-      In this experiment, you will read 20 sentence pairs word-by-word. You will have to continue the sentence gramnatically by pressing on your keyboard. Finally, for each sentence, answer a short question.
+      In this experiment, you will read 20 sentence pairs word-by-word. You will have to proceed through the sentence by pressing on your keyboard, indicating which of the two words presented to you constitutes a grammatical continuation of the sentence. Finally, for each sentence, answer a short question.
       You will also be asked to complete a short personality test. Please pay attention, thanks!<br>
       <strong>Please note that this experiment cannot be completed in the FireFox browser.</strong>
     </p>
@@ -75,12 +75,12 @@
   <div class="slide" id="instructions">
 
 		<h3>Instructions</h3>
-    <p>On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a word and an "x-x-x". Press the key which responds to the real word (either the [s] key or the [l] key). Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
+    <p>On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which correspons to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
 		<p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
     <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
 
-    <p>Let's start with an example!</p>
+    <p>If you're a bit confused, don't worry - we will start with an example!</p>
     <p> <strong> Press the spacebar to continue! </strong> </p>
 
 
@@ -155,7 +155,7 @@
 
   <h3>Let's Get Started!</h3>
   <p>Great job! Now we can really get started.</p>
-  <p><strong>To reiterate:</strong> On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a word and an "x-x-x". Press the key which responds to the real word (either the [s] key or the [l] key). Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
+  <p><strong>To reiterate:</strong> On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which correspons to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
   <p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
   <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
